Basic site working with bigote templates

--- a/clj/template/index.html
+++ b/clj/template/index.html
@@ -52,8 +52,8 @@ series: [{color: '#ffa500'},{lineWidth: 0.5}]
         <div id="header" class="heading">
             <h1>(math-with Clojure</h1>
         </div>
-
         <div id="container">
+            {{>box}}
             <div class="box">
                 <div class="heading boxhead bh-expanded">
                     <img class="trigger" src="./theme/box-collapse.png" alt="collapse"></img>
