--- a/clj/template/index.html
+++ b/clj/template/index.html
@@ -29,11 +29,17 @@
                 </div>
                 <div class="boxcontent">
                     <p>This site contains a collection of charts with content generated
-                    using Clojure.</p><p>To get started the following is an example of 
-                    a coin flip random walk.   All the charts on this page are dynamically
-                    generated, and the charts can be zoomed.</p>
-                    <p>The source code can be found here: <a href="https://github.com/ericdwhite/fmath">Github: ericdwhite/fmath</a></p>
+                    using Clojure. All the charts on this page are dynamically
+                    generated, and the charts can be zoomed.  Clicking <img src="./theme/box-collapse.png"/> minimizes a section, 
+                    and <img src="./theme/box-expand.png"/> expands.</p>
+                    
+                    <p>All of the source code can be found here: <a href="https://github.com/ericdwhite/fmath">Github: ericdwhite/fmath</a>.  For issues
+                    or comments please drop a note <a href="https://github.com/ericdwhite/fmath/issues">here</a>.</p>
+                    
+                    <p>As an example the following is 
+                    a coin flip random walk.</p>
                     <div id="chartdiv" class="chart"></div>
+                    <p class="source"><ul><li><a href="https://github.com/ericdwhite/fmath/blob/master/clj/src/fmath/randwalk.clj">randwalk.clj</a></li></ul></p>
                     <p><button onclick="plot.resetZoom()">Reset Zoom</button>
                        <button onclick="configureRandomWalk()">Generate Again</button></p>
                 </div>
@@ -54,7 +60,6 @@
                     <p>Again, the source code can be found here: <a href="https://github.com/ericdwhite/fmath">Github: ericdwhite/fmath</a></p>
                 </div>
             </div>
-            <script src="https://gist.github.com/331612.js"> </script>
         </div>
         <div id="footer">
             <p>Eric D. White, 2011</p>
