Google Analytics placeholder

--- a/clj/template/index.html
+++ b/clj/template/index.html
@@ -17,9 +17,11 @@
                     configureRandomWalk();
             });
         </script>
+        <title>(math-with [clojure]</title>
+    </head>
     <body>
         <div id="header" class="heading">
-            <h1>(math-with Clojure</h1>
+            <h1>(math-with [clojure]</h1>
         </div>
         <div id="container">
             <div class="box">
@@ -62,6 +64,7 @@
             </div>
         </div>
         <div id="footer">
+            {{>google-analytics}}
             <p>Eric D. White, 2011</p>
         </div>
     </body>
