--- a/clj/template/index.html
+++ b/clj/template/index.html
@@ -21,7 +21,9 @@
     </head>
     <body>
         <div id="header" class="heading">
+        <div id="header-outer">
             <h1>(math-with [clojure]</h1>
+        </div>
         </div>
         <div id="container">
             <div class="box">
