Fabric deployment with revision marker.

--- a/clj/template/index.html
+++ b/clj/template/index.html
@@ -67,6 +67,7 @@
         </div>
         <div id="footer">
             {{>google-analytics}}
+            {{>revision}}
             <p>Eric D. White, 2011</p>
         </div>
     </body>
