Final prep and commands working on test server.  Now for the real deployment.

--- a/clj/template/index.html
+++ b/clj/template/index.html
@@ -40,8 +40,7 @@
                     <p>All of the source code can be found here: <a href="https://github.com/ericdwhite/fmath">Github: ericdwhite/fmath</a>.  For issues
                     or comments please drop a note <a href="https://github.com/ericdwhite/fmath/issues">here</a>.</p>
                     
-                    <p>As an example the following is 
-                    a coin flip random walk.</p>
+                    <p>The first example is a coin flip random walk:</p>
                     <div id="chartdiv" class="chart"></div>
                     <p class="source"><ul><li><a href="https://github.com/ericdwhite/fmath/blob/master/clj/src/fmath/randwalk.clj">randwalk.clj</a></li></ul></p>
                     <p><button onclick="plot.resetZoom()">Reset Zoom</button>
