--- a/clj/template/revision.html
+++ b/clj/template/revision.html
@@ -1,1 +1,1 @@
-<a href="https://github.com/ericdwhite/fmath">github://ericdwhite/fmath</a>
+<a href="https://github.com/ericdwhite/fmath/tree/">github://ericdwhite/fmath </a>
