--- a/clj/template/index.html
+++ b/clj/template/index.html
@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7"/>
+        <!--[if IE]><script language="javascript" type="text/javascript" src="js/excanvas.min.js"></script><![endif]-->
         <script language="javascript" type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/jquery.jqplot.min.js"></script>
         <script language="javascript" type="text/javascript" src="js/plugins/jqplot.cursor.min.js"></script>
